# email-vaification-service

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: config.rs  main.rs
