[package]
name = "email-verification-service"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.3"
envconfig = "0.10"
log = "0.4"
simple_logger = "1.13"
async-std = "1.9.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.66"